[package]
name = "qwe"
version = "0.1.0"
edition = "2021"
#build = "build.rs"

[build-dependencies]
slint-build = "0.2.4"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = { version = "*" }
anyhow = { version = "*" }
clap = { version = "*" }
slint = "0.2.4"

[profile.dev.build-override]
opt-level = 2

[features]
#default = ["jack"]
#jack=[]
